--- a/index.html
+++ b/index.html
@@ -9,411 +9,213 @@
     <style>
    /* CSS Geral e do Painel */
         * {
-            margin: 0; padding: 0; box-sizing: border-box;
-        }
-        body {
-            font-family: 'Open Sans', sans-serif;
-            background: url('https://i.postimg.cc/FzJfb8Yz/fundo.png') no-repeat center center fixed;
-            background-size: cover;
-            padding-top: 100px; /* Espaço para o topo fixo */
-            color: #222;
-            display: flex;
-            justify-content: flex-start; /* Alinha no topo e à esquerda */
-            align-items: center; /* Centraliza horizontalmente o conteúdo se for menor que a largura do body */
-            min-height: 100vh;
-            flex-direction: column;
-        }
-        /* Header (Topo) */
-        .topo {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px 15px;
-            background: rgba(255,255,255,0.9);
-            backdrop-filter: blur(8px);
-            position: fixed;
-            top: 0; left: 0; right: 0;
-            z-index: 1100;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-          
-        }
-}
-        .logo {
-            max-width: 120px;
-            height: 40px;
-            cursor: pointer;
-            margin-right: 10px
-        }
+            * {
+      margin: 0; padding: 0; box-sizing: border-box;
+    }
+    body {
+      font-family: 'Open Sans', sans-serif;
+      background: url('https://i.postimg.cc/FzJfb8Yz/fundo.png') no-repeat center center fixed;
+      background-size: cover;
+      padding-top: 100px;
+      color: #222;
+    }
+    .topo {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 20px 40px;
+      background: rgba(255,255,255,0.9);
+      backdrop-filter: blur(8px);
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      z-index: 1100;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    .logo {
+      max-width: 160px;
+      height: auto;
+      cursor: pointer;
+    }
+    .tabs {
+      display: flex;
+      gap: 10px;
+    }
+    .tab {
+      flex: 1;
+      background: rgba(0,123,255,0.15);
+      color: #004085;
+      padding: 12px 20px;
+      text-align: center;
+      border-radius: 10px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+      user-select: none;
+      position: relative;
+    }
+    .tab:hover {
+      background-color: rgba(0,123,255,0.35);
+      color: #002752;
+      box-shadow: 0 4px 10px rgba(0,123,255,0.4);
+    }
+    .tab.active {
+      background-color: #66b2ff;
+      color: white;
+      box-shadow: 0 4px 15px rgba(0,123,255,0.5);
+    }
+    .tab.active::after {
+      content: '';
+      position: absolute;
+      left: 25%;
+      right: 25%;
+      bottom: 4px;
+      height: 3px;
+      background-color: white;
+      border-radius: 2px;
+    }
+    main {
+      max-width: 1000px;
+      margin: 60px auto;
+      background-color: transparent;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      padding: 40px;
+      min-height: 600px;
+    }
+    form {
+      width: 100%;
+    }
+    .form-grid {
+      display: flex;
+      justify-content: space-between;
+      gap: 40px;
+      margin-top: 20px;
+      flex-wrap: wrap;
+    }
+    .coluna-esquerda, .coluna-direita {
+      flex: 1;
+      min-width: 300px;
+    }
+    label {
+      font-weight: 600;
+      margin-bottom: 6px;
+      display: block;
+      color: #333;
+    }
+    input, select {
+      width: 100%;
+      padding: 12px 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin-bottom: 20px;
+      font-size: 14px;
+      background: white;
+    }
+    input:focus, select:focus {
+      border-color: #28a745;
+      outline: none;
+    }
+    button {
+      background-color: #28a745;
+      color: white;
+      font-weight: bold;
+      font-size: 16px;
+      padding: 14px;
+      width: 100%;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #218838;
+    }
+    #campoOutro {
+      margin-top: 10px;
+      display: none;
+    }
+    /* Lista Funcionários */
+    #lista-funcionarios {
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      max-width: 800px;
+      margin: auto;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      display: none;
+      min-height: 400px;
+    }
+    .funcionario-card {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      padding: 15px;
+      border-bottom: 1px solid #ddd;
+    }
+    .funcionario-card:last-child {
+      border-bottom: none;
+    }
+    .funcionario-foto {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #007bff;
+    }
+    .funcionario-info {
+      flex-grow: 1;
+    }
+    .funcionario-nome {
+      font-weight: 700;
+      font-size: 18px;
+      margin-bottom: 5px;
+    }
+    .funcionario-cargo,
+    .funcionario-turno {
+      font-size: 14px;
+      color: #555;
+    }
+    /* Modal Funcionário */
+    #formFuncionarioModal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      flex-direction: column;
+    }
+    #formFuncionarioModal form {
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      max-width: 400px;
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+    }
+    #formFuncionarioModal form button {
+      margin-top: 20px;
+    }
+    @media (max-width: 600px) {
+      .form-grid {
+        flex-direction: column;
+      }
+      .coluna-esquerda, .coluna-direita {
+        min-width: 100%;
+      }
+      .funcionario-card {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .funcionario-foto {
+        margin-bottom: 10px;
+      }
+    }
 
-         /* --- Alterações aqui para as abas uma ao lado da outra --- */
-        .tabs {
-            display: flex; /* Adicionado: Ativa o Flexbox para alinhar horizontalmente */
-            flex-wrap: nowrap; /* Impede que as abas quebrem para a próxima linha */
-            gap: 8px; /* Aumentado um pouco o espaçamento entre as abas */
-            overflow-x: auto; /* Adicionado: Habilita scroll horizontal se as abas excederem a largura */
-            -webkit-overflow-scrolling: touch; /* Melhora o scroll em dispositivos iOS */
-            padding-bottom: 5px; /* Adicionado: Para dar espaço para a barra de rolagem se aparecer */
-        }
-        .tab {
-            flex-shrink: 0; /* Impede que as abas encolham */
-            background: rgba(0,123,255,0.15);
-            color: #004085;
-            padding: 6px 12px; /* Ajustado um pouco o padding para melhor visualização */
-            text-align: center;
-            border-radius: 8px; /* Borda um pouco mais arredondada */
-            cursor: pointer;
-            font-weight: 600;
-            transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
-            user-select: none;
-            position: relative;        
-            font-size: 13px; /* Texto um pouco maior para melhor leitura */
-            min-width: 120px; /* Largura mínima para cada aba */
-            white-space: nowrap; /* Impede que o texto da aba quebre */
-            margin-bottom: 2px
-        }
-        /* --- Fim das alterações para abas --- */
-
-        .tab:hover {
-            background-color: rgba(0,123,255,0.35);
-            color: #002752;
-            box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
-        }
-        .tab.active {
-            background-color: #66b2ff;
-            color: white;
-            box-shadow: 0 4px 15px rgba(0,123,255,0.5);
-        }
-        .tab.active::after {
-            content: '';
-            position: absolute;
-            left: 25%;
-            right: 25%;
-            bottom: 4px;
-            height: 3px;
-            background-color: white;
-            border-radius: 2px;
-        }
-        main {
-            max-width: 1000px;
-            margin: 60px auto; /* Mantém a margem para centralização horizontal */
-            background-color: transparent; /* Será preenchido pelos conteúdos das abas */
-            border-radius: 12px;
-            box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-            padding: 0; /* O padding será nos conteúdos internos */
-            min-height: 600px;
-            transition: opacity 0.5s ease-in-out;
-            width: 90%; /* Ajuste para não ficar muito largo em telas menores */
-            display: flex; /* Para flexibilizar o conteúdo interno */
-            flex-direction: column; /* Conteúdos empilhados verticalmente */
-            align-items: center; /* Centraliza o conteúdo das abas */
-            justify-content: flex-start; /* Alinha o conteúdo das abas no topo */
-        }
-        .tab-content {
-            background: transparent; /* Fundo transparente */
-            padding: 40px;             /* Mantém o espaçamento interno */
-            border-radius: 12px;       /* Pode manter para cantos arredondados */
-            box-shadow: none;          /* Remove sombra para não interferir */
-            width: 100%;
-            display: none;             /* continua escondido por padrão */
-        }
-        .tab-content.active {
-            display: block; /* Mostra o conteúdo ativo */
-        }
-
-        form {
-            width: 100%;
-        }
-        .form-grid {
-            display: flex;
-            justify-content: space-between;
-            gap: 40px;
-            margin-top: 20px;
-            flex-wrap: wrap;
-        }
-        .coluna-esquerda, .coluna-direita {
-            flex: 1;
-            min-width: 300px;
-        }
-        label {
-            font-weight: 600;
-            margin-bottom: 6px;
-            display: block;
-            color: #333;
-        }
-        input, select {
-            width: 100%;
-            padding: 12px 10px;
-            border: 1px solid #ccc;
-            border-radius: 6px;
-            margin-bottom: 20px;
-            font-size: 14px;
-            background: white;
-            box-sizing: border-box; /* Importante para width:100% com padding */
-        }
-        input:focus, select:focus {
-            border-color: #28a745;
-            outline: none;
-        }
-        button {
-            background-color: #28a745;
-            color: white;
-            font-weight: bold;
-            font-size: 16px;
-            padding: 14px;
-            width: 100%;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            margin-top: 20px;
-            transition: background-color 0.3s ease;
-        }
-        button:hover {
-            background-color: #218838;
-        }
-        #campoOutro {
-            margin-top: 10px;
-            display: none;
-        }
-
-        /* --- NOVO CSS para a lista de Colaboradores (Cards) --- */
-        #colaboradores-content {
-            background: #fff;
-            padding: 30px;
-            border-radius: 12px;
-            max-width: 800px; /* Ajustado para ser centralizado dentro da main */
-            margin: auto; /* Centraliza */
-            box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-            display: none; /* Inicia escondido, controlado pelo JS */
-            min-height: 400px;
-            position: relative;
-        }
-        #filtroTurno {
-            padding: 10px 12px;
-            border-radius: 6px;
-            border: 1px solid #ccc;
-            font-size: 1em;
-            width: 100%; /* Ocupa a largura total disponível */
-            max-width: 250px; /* Limita a largura para melhor visualização em telas maiores */
-            margin-bottom: 20px;
-            display: block; /* Garante que o select esteja em sua própria linha */
-        }
-        #listaColaboradores { /* ID do container onde os cards serão injetados */
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px; /* Espaço entre os cards */
-            justify-content: center; /* Centraliza os cards */
-            margin-top: 20px;
-        }
-        .colaborador-card {
-            border: 1px solid #e0e0e0;
-            border-radius: 10px;
-            padding: 15px;
-            width: 200px; /* Largura fixa para os cards */
-            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-            text-align: center;
-            background-color: #ffffff;
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
-        .colaborador-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(0,0,0,0.15);
-        }
-
-        .colaborador-card img {
-            width: 100px; /* Tamanho da foto */
-            height: 100px;
-            border-radius: 50%; /* Para fotos circulares */
-            object-fit: cover; /* Garante que a imagem preencha o espaço sem distorcer */
-            margin-bottom: 10px;
-            border: 3px solid #007bff; /* Borda ao redor da foto */
-        }
-
-        .colaborador-card h3 {
-            margin: 0 0 5px 0;
-            color: #333;
-            font-size: 1.2em;
-        }
-
-        .colaborador-card p {
-            margin: 0;
-            color: #666;
-            font-size: 0.9em;
-        }
-        /* --- FIM DO NOVO CSS para a lista de Colaboradores (Cards) --- */
-
-
-        /* Modal (geral para overlays) */
-        .modal-overlay {
-            display: none; /* Todos os overlays de modal começam escondidos */
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background: rgba(0,0,0,0.6);
-            align-items: center;
-            justify-content: center;
-            z-index: 9999;
-            flex-direction: column;
-        }
-        .modal-content {
-            background: white;
-            padding: 30px;
-            border-radius: 12px;
-            max-width: 400px;
-            width: 90%;
-            display: flex;
-            flex-direction: column;
-        }
-        .modal-content button {
-            margin-top: 20px;
-        }
-        .modal-content h2 {
-            margin-bottom: 20px;
-            color: #004085;
-            font-size: 24px;
-            text-align: center;
-        }
-        .modal-message {
-            color: red;
-            margin-top: 10px;
-            font-weight: 600;
-            text-align: center;
-        }
-
-        /* DDS - Diálogos de Segurança */
-        #dialogos-seguranca-content {
-            display: none; /* Inicialmente escondido */
-            padding: 40px;
-            background: white;
-            border-radius: 12px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            width: 100%;
-            text-align: center;
-        }
-        #fotosDSS {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 15px;
-            margin-top: 20px;
-            justify-items: center;
-        }
-        .foto-dss {
-            width: 100%;
-            max-width: 200px;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-        }
-        #form-dialogos-foto {
-            margin-top: 20px;
-            padding: 20px;
-            border: 1px solid #eee;
-            border-radius: 8px;
-            background-color: #f9f9f9;
-        }
-        #form-dialogos-foto label, #form-dialogos-foto input {
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        /* Indicadores */
-        #indicadores-content {
-            display: none; /* Inicialmente escondido */
-            padding: 40px;
-            background: white;
-            border-radius: 12px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            width: 100%;
-        }
-        #graficoIndicadores {
-            max-width: 100%;
-            height: 400px; /* Altura fixa para o gráfico */
-            margin-top: 20px;
-        }
-
-        /* --- NOVO CSS PARA O BOTÃO FLUTUANTE --- */
-        .fab-button {
-            position: fixed; /* Fixa na tela */
-            bottom: 30px;    /* 30px do fundo */
-            right: 30px;     /* 30px da direita */
-            background-color: #007bff; /* Cor azul do seu tema */
-            color: white;
-            border: none;
-            border-radius: 50%; /* Faz o botão ser redondo */
-            width: 60px;     /* Largura */
-            height: 60px;    /* Altura */
-            font-size: 30px; /* Tamanho do '+' */
-            display: flex; /* Para centralizar o '+' */
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.25); /* Sombra para destacá-lo */
-            z-index: 1000;   /* Garante que fique acima de outros elementos */
-            transition: background-color 0.3s ease, transform 0.2s ease;
-        }
-
-        .fab-button:hover {
-            background-color: #0056b3; /* Cor mais escura ao passar o mouse */
-            transform: translateY(-3px); /* Efeito de "subir" um pouco */
-        }
-
-        /* Esconder o botão "Adicionar Colaborador" original se ele ainda existir */
-        #colaboradores-content #btn-add-colaborador {
-            display: none;
-        }
-        /* --- FIM DO NOVO CSS --- */
-
-        /* Responsividade */
-        @media (max-width: 768px) {
-            .topo {
-                flex-direction: column;
-                padding: 15px 20px;
-            }
-            .tabs {
-                flex-wrap: wrap; /* Pode voltar a quebrar se a tela for muito pequena */
-                justify-content: center;
-                margin-top: 15px;
-            }
-            .tab {
-                flex: none; /* Não cresce, mantém o tamanho do conteúdo */
-                width: auto;
-                padding: 10px 15px;
-                min-width: unset; /* Remove min-width em telas pequenas para quebrar melhor */
-            }
-            main {
-                margin: 30px auto;
-                padding: 0; /* Padding será nos conteúdos das abas */
-            }
-            .tab-content {
-                padding: 20px;
-            }
-            .form-grid {
-                flex-direction: column;
-                gap: 20px;
-            }
-            .coluna-esquerda, .coluna-direita {
-                min-width: 100%;
-            }
-            /* Ajustes para cards de colaborador em telas menores */
-            #listaColaboradores {
-                justify-content: center;
-                gap: 15px;
-            }
-            .colaborador-card {
-                width: 160px; /* Adapta a largura do card */
-                padding: 10px;
-            }
-            .colaborador-card img {
-                width: 80px; /* Adapta o tamanho da foto */
-                height: 80px;
-            }
-            .colaborador-card h3 {
-                font-size: 1.1em;
-            }
-            .colaborador-card p {
-                font-size: 0.8em;
-            }
-        }
     </style>
 </head>
 <body>
