--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
       user-select: none;
       position: relative;
+      font-size: 12px
     }
     .tab:hover {
       background-color: rgba(0,123,255,0.35);
