--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&amp;display=swap" rel="stylesheet">
   <style>
     /* CSS Geral e do Painel */
-    * {
-      margin: 0; padding: 0; box-sizing: border-box;
+      * {
+    margin: 0; padding: 0; box-sizing: border-box;
     }
     body {
       font-family: 'Open Sans', sans-serif;
@@ -23,12 +23,12 @@
       align-items: center;
       justify-content: space-between;
       padding: 20px 40px;
-      background: rgba(255, 255, 255, 0.9);
+      background: rgba(255,255,255,0.9);
       backdrop-filter: blur(8px);
       position: fixed;
       top: 0; left: 0; right: 0;
       z-index: 1100;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     .logo {
       max-width: 160px;
@@ -41,7 +41,7 @@
     }
     .tab {
       flex: 1;
-      background: rgba(0, 123, 255, 0.15);
+      background: rgba(0,123,255,0.15);
       color: #004085;
       padding: 10px 15px;
       text-align: center;
@@ -51,33 +51,171 @@
       transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
       user-select: none;
       position: relative;
-      font-size: 12px;
+      font-size: 12px
     }
     .tab:hover {
-      background-color: rgba(0, 123, 255, 0.35);
+      background-color: rgba(0,123,255,0.35);
       color: #002752;
-      box-shadow: 0 4px 10px rgba(0, 123, 255, 0.4);
+      box-shadow: 0 4px 10px rgba(0,123,255,0.4);
     }
     .tab.active {
       background-color: #66b2ff;
       color: white;
-      box-shadow: 0 4px 15px rgba(0, 123, 255, 0.5);
+      box-shadow: 0 4px 15px rgba(0,123,255,0.5);
     }
-    .main-content {
+    .tab.active::after {
+      content: '';
+      position: absolute;
+      left: 25%;
+      right: 25%;
+      bottom: 4px;
+      height: 3px;
+      background-color: white;
+      border-radius: 2px;
+    }
+    main {
       max-width: 1000px;
       margin: 60px auto;
       background-color: transparent;
       border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
       padding: 40px;
       min-height: 600px;
     }
-    .tab-content {
+    form {
+      width: 100%;
+    }
+    .form-grid {
+      display: flex;
+      justify-content: space-between;
+      gap: 40px;
+      margin-top: 20px;
+      flex-wrap: wrap;
+    }
+    .coluna-esquerda, .coluna-direita {
+      flex: 1;
+      min-width: 300px;
+    }
+    label {
+      font-weight: 600;
+      margin-bottom: 6px;
+      display: block;
+      color: #333;
+    }
+    input, select {
+      width: 100%;
+      padding: 12px 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin-bottom: 20px;
+      font-size: 14px;
+      background: white;
+    }
+    input:focus, select:focus {
+      border-color: #28a745;
+      outline: none;
+    }
+    button {
+      background-color: #28a745;
+      color: white;
+      font-weight: bold;
+      font-size: 16px;
+      padding: 14px;
+      width: 100%;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #218838;
+    }
+    #campoOutro {
+      margin-top: 10px;
       display: none;
     }
-    .tab-content.active {
-      display: block;
+    /* Lista Funcionários */
+    #lista-funcionarios {
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      max-width: 800px;
+      margin: auto;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      display: none;
+      min-height: 400px;
     }
+    .funcionario-card {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      padding: 15px;
+      border-bottom: 1px solid #ddd;
+    }
+    .funcionario-card:last-child {
+      border-bottom: none;
+    }
+    .funcionario-foto {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #007bff;
+    }
+    .funcionario-info {
+      flex-grow: 1;
+    }
+    .funcionario-nome {
+      font-weight: 700;
+      font-size: 18px;
+      margin-bottom: 5px;
+    }
+    .funcionario-cargo,
+    .funcionario-turno {
+      font-size: 14px;
+      color: #555;
+    }
+    /* Modal Funcionário */
+    #formFuncionarioModal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      flex-direction: column;
+    }
+    #formFuncionarioModal form {
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      max-width: 400px;
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+    }
+    #formFuncionarioModal form button {
+      margin-top: 20px;
+    }
+    @media (max-width: 600px) {
+      .form-grid {
+        flex-direction: column;
+      }
+      .coluna-esquerda, .coluna-direita {
+        min-width: 100%;
+      }
+      .funcionario-card {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .funcionario-foto {
+        margin-bottom: 10px;
+      }
+    }
+
   </style>
 </head>
 <body>
