--- a/index.html
+++ b/index.html
@@ -350,15 +350,13 @@
     const supabaseKey = 'processo . env . SUPABASE_KEY';
     const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-    tabs.forEach(tab => {
+    // Tabs
+    document.querySelectorAll('.tab').forEach(tab => {
       tab.addEventListener('click', () => {
-        const tabName = tab.dataset.tab;
-
-        tabs.forEach(t => t.classList.remove('active'));
-        tabContents.forEach(content => content.classList.remove('active'));
-
+        document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+        document.querySelectorAll('.tab-content').forEach(tc => tc.classList.remove('active'));
         tab.classList.add('active');
-        document.getElementById(`${tabName}-content`).classList.add('active');
+        document.getElementById(`${tab.dataset.tab}-content`).classList.add('active');
       });
     });
 // Formulário Operacoes => Tabela "formulário"
