--- a/index.html
+++ b/index.html
@@ -116,48 +116,27 @@
       font-size: 14px;
       color: #888;
     }
-    /* Botão excluir no card */
-    .btn-excluir {
-      position: absolute;
-      top: 8px;
-      right: 8px;
-      background: #dc3545;
-      border: none;
-      color: white;
-      border-radius: 50%;
-      width: 28px;
-      height: 28px;
-      font-weight: 700;
-      font-size: 16px;
-      cursor: pointer;
-      opacity: 0.85;
-      transition: opacity 0.2s ease;
-    }
-    .btn-excluir:hover {
-      opacity: 1;
-    }
-    /* Botões flutuantes adicionar */
-    .fab { /* Estilo genérico para FABs */
-      position: fixed;
-      bottom: 30px;
-      background: #0d6efd;
-      color: white;
-      border: none;
-      border-radius: 50%;
-      width: 56px;
-      height: 56px;
-      font-size: 32px;
-      cursor: pointer;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      z-index: 2000;
-      display: none; /* Escondido por padrão, JavaScript controlará */
-    }
-    #btnAddColaborador {
-      right: 30px;
-    }
-    #btnAddDialogo {
-      right: 100px;
-    }
+  .fab { /* Estilo genérico para FABs */
+  position: fixed; /* Isso é crucial para eles flutuarem */
+  bottom: 30px;
+  background: #0d6efd;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+  font-size: 32px;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  z-index: 2000;
+  display: none; /* ISTO É O QUE OS ESCONDE INICIALMENTE */
+}
+#btnAddColaborador {
+  right: 30px;
+}
+#btnAddDialogo {
+  right: 100px;
+}
     /* Modal base */
     .modal {
       display: none;
@@ -374,6 +353,7 @@
       <canvas id="graficoTipo"></canvas>
     </div>
   </div>
+  
 </main>
 
 <button class="fab" id="btnAddColaborador" title="Adicionar Colaborador">+</button>
