--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 <script>
   // ** IMPORTANTE: Substitua com suas credenciais do Supabase **
   const supabaseUrl = "https://tzdogfvislvfiyepjpid.supabase.co"; // Seu URL do projeto Supabase
-  const supabaseKey = "SUA_CHAVE_ANON_PUBLIC_AQUI"; // Sua "Anon Public Key"
+  const supabaseKey = "processo . env . SUPABASE_KEY"; // Sua "Anon Public Key"
   const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
   const SENHA_UNICA = "1234"; // Mantenha em mente os riscos de segurança de senha no frontend
