--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 <script>
   // ** IMPORTANTE: Substitua com suas credenciais do Supabase **
   const supabaseUrl = "https://tzdogfvislvfiyepjpid.supabase.co"; // Seu URL do projeto Supabase
-  const supabaseKey = "processo . env . SUPABASE_KEY"; // Sua "Anon Public Key"
+  const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InR6ZG9nZnZpc2x2Zml5ZXBqcGlkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM0NjU3NTYsImV4cCI6MjA2OTA0MTc1Nn0.Pxz56EZFXrKSCuMc7Q76RMiDXV95OBiSvz0aY2Bb3NQ"; // Sua "Anon Public Key"
   const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
   const SENHA_UNICA = "1234"; // Mantenha em mente os riscos de segurança de senha no frontend
